Bug 136292 jsdIValue doesn't handle Unicode string values at all Bug 335098 Strings with \x00 are truncated support non ascii strings from js engine, r+sr=jst