js/jsd/jsd_xpc.cpp
@@ -151,8 +151,7 @@ static struct FilterRecord {
     PRCList      links;
     jsdIFilter  *filterObject;
     void        *glob;
-    char        *urlPattern;    
-    PRUint32     patternLength;
+    nsCString    urlPattern;
     PatternType  patternType;
     PRUint32     startLine;
     PRUint32     endLine;
@@ -249,9 +248,7 @@ void
 jsds_FreeFilter (FilterRecord *filter)
 {
     NS_IF_RELEASE (filter->filterObject);
-    if (filter->urlPattern)
-        nsMemory::Free(filter->urlPattern);
-    PR_Free (filter);
+    delete filter;
 }
 
 /* copies appropriate |filter| attributes into |rec|.
@@ -284,44 +281,39 @@ jsds_SyncFilter (FilterRecord *rec, jsdIFilter *filter)
     if (NS_FAILED(rv))
         return PR_FALSE;    
 
-    char *urlPattern;
-    rv = filter->GetUrlPattern (&urlPattern);
+    nsCAutoString urlPattern;
+    rv = filter->GetUrlPattern (urlPattern);
     if (NS_FAILED(rv))
         return PR_FALSE;
     
-    if (urlPattern) {
-        PRUint32 len = PL_strlen(urlPattern);
+    PRUint32 len = urlPattern.Length();
+    if (len) {
         if (urlPattern[0] == '*') {
             /* pattern starts with a *, shift all chars once to the left,
              * including the trailing null. */
-            memmove (&urlPattern[0], &urlPattern[1], len);
+            urlPattern = Substring(urlPattern, 1, len);
 
             if (urlPattern[len - 2] == '*') {
                 /* pattern is in the format "*foo*", overwrite the final * with
                  * a null. */
-                urlPattern[len - 2] = '\0';
+                urlPattern.Truncate(len - 2);
                 rec->patternType = ptContains;
-                rec->patternLength = len - 2;
             } else {
                 /* pattern is in the format "*foo", just make a note of the
                  * new length. */
                 rec->patternType = ptEndsWith;
-                rec->patternLength = len - 1;
             }
         } else if (urlPattern[len - 1] == '*') {
             /* pattern is in the format "foo*", overwrite the final * with a 
              * null. */
-            urlPattern[len - 1] = '\0';
+            urlPattern.Truncate(len - 1);
             rec->patternType = ptStartsWith;
-            rec->patternLength = len - 1;
         } else {
             /* pattern is in the format "foo". */
             rec->patternType = ptEquals;
-            rec->patternLength = len;
         }
     } else {
         rec->patternType = ptIgnore;
-        rec->patternLength = 0;
     }
 
     /* we got everything we need without failing, now copy it into rec. */
@@ -337,8 +329,6 @@ jsds_SyncFilter (FilterRecord *rec, jsdIFilter *filter)
     rec->startLine     = startLine;
     rec->endLine       = endLine;
     
-    if (rec->urlPattern)
-        nsMemory::Free (rec->urlPattern);
     rec->urlPattern = urlPattern;
 
     return PR_TRUE;
@@ -388,8 +378,8 @@ jsds_FilterHook (JSDContext *jsdc, JSDThreadState *state)
 
     jsuint pc = JSD_GetPCForStackFrame (jsdc, state, frame);
 
-    const char *url = JSD_GetScriptFilename (jsdc, script);
-    if (!url) {
+    nsDependentCString url(JSD_GetScriptFilename (jsdc, script));
+    if (url.IsEmpty()) {
         NS_WARNING ("Script with no filename");
         return PR_FALSE;
     }
@@ -420,28 +410,31 @@ jsds_FilterHook (JSDContext *jsdc, JSDThreadState *state)
                     return !!(flags & jsdIFilter::FLAG_PASS);
 
                 if (!len)
-                    len = PL_strlen(url);
-                
-                if (len >= currentFilter->patternLength) {
+                    len = url.Length();
+                nsCString urlPattern = currentFilter->urlPattern;
+                PRUint32 patternLength = urlPattern.Length();
+                if (len >= patternLength) {
                     switch (currentFilter->patternType) {
                         case ptEquals:
-                            if (!PL_strcmp(currentFilter->urlPattern, url))
+                            if (urlPattern.Equals(url))
                                 return !!(flags & jsdIFilter::FLAG_PASS);
                             break;
                         case ptStartsWith:
-                            if (!PL_strncmp(currentFilter->urlPattern, url, 
-                                           currentFilter->patternLength))
+                            if (urlPattern.Equals(Substring(url, 0, patternLength)))
                                 return !!(flags & jsdIFilter::FLAG_PASS);
                             break;
                         case ptEndsWith:
-                            if (!PL_strcmp(currentFilter->urlPattern,
-                                           &url[len - 
-                                               currentFilter->patternLength]))
+                            if (urlPattern.Equals(Substring(url, len - patternLength)))
                                 return !!(flags & jsdIFilter::FLAG_PASS);
                             break;
                         case ptContains:
-                            if (PL_strstr(url, currentFilter->urlPattern))
-                                return !!(flags & jsdIFilter::FLAG_PASS);
+                            {
+                                nsACString::const_iterator start, end;
+                                url.BeginReading(start);
+                                url.EndReading(end);
+                                if (FindInReadable(currentFilter->urlPattern, start, end))
+                                    return !!(flags & jsdIFilter::FLAG_PASS);
+                            }
                             break;
                         default:
                             NS_ASSERTION(0, "Invalid pattern type");
@@ -557,14 +550,14 @@ jsds_ErrorHookProc (JSDContext *jsdc, JSContext *cx, const char *message,
         val = getter_AddRefs(jsdValue::FromPtr(jsdc, jsdv));
     }
     
-    const char *fileName;
+    nsCAutoString fileName;
     PRUint32    line;
     PRUint32    pos;
     PRUint32    flags;
     PRUint32    errnum;
     PRBool      rval;
     if (report) {
-        fileName = report->filename;
+        fileName.Assign(report->filename);
         line = report->lineno;
         pos = report->tokenptr - report->linebuf;
         flags = report->flags;
@@ -572,7 +565,6 @@ jsds_ErrorHookProc (JSDContext *jsdc, JSContext *cx, const char *message,
     }
     else
     {
-        fileName = 0;
         line     = 0;
         pos      = 0;
         flags    = 0;
@@ -580,7 +572,7 @@ jsds_ErrorHookProc (JSDContext *jsdc, JSContext *cx, const char *message,
     }
     
     gJsds->Pause(nsnull);
-    hook->OnError (message, fileName, line, pos, flags, errnum, val, &rval);
+    hook->OnError (nsDependentCString(message), fileName, line, pos, flags, errnum, val, &rval);
     gJsds->UnPause(nsnull);
     
     running = PR_FALSE;
@@ -819,16 +811,9 @@ jsdObject::GetJSDObject(JSDObject **_rval)
 }
 
 NS_IMETHODIMP
-jsdObject::GetCreatorURL(char **_rval)
+jsdObject::GetCreatorURL(nsACString &_rval)
 {
-    const char *url = JSD_GetObjectNewURL(mCx, mObject);
-    if (url) {
-        *_rval = PL_strdup(url);
-        if (!*_rval)
-            return NS_ERROR_OUT_OF_MEMORY;
-    } else {
-        *_rval = nsnull;
-    }
+    _rval.Assign(JSD_GetObjectNewURL(mCx, mObject));
     return NS_OK;
 }
 
@@ -840,16 +825,9 @@ jsdObject::GetCreatorLine(PRUint32 *_rval)
 }
 
 NS_IMETHODIMP
-jsdObject::GetConstructorURL(char **_rval)
+jsdObject::GetConstructorURL(nsACString &_rval)
 {
-    const char *url = JSD_GetObjectConstructorURL(mCx, mObject);
-    if (url) {
-        *_rval = PL_strdup(url);
-        if (!*_rval)
-            return NS_ERROR_OUT_OF_MEMORY;
-    } else {
-        *_rval = nsnull;
-    }
+    _rval.Assign(JSD_GetObjectConstructorURL(mCx, mObject));
     return NS_OK;
 }
 
@@ -1225,20 +1203,16 @@ jsdScript::GetFlags(PRUint32 *_rval)
 }
 
 NS_IMETHODIMP
-jsdScript::GetFileName(char **_rval)
+jsdScript::GetFileName(nsACString &_rval)
 {
-    *_rval = ToNewCString(*mFileName);
-    if (!*_rval)
-        return NS_ERROR_OUT_OF_MEMORY;
+    _rval.Assign(*mFileName);
     return NS_OK;
 }
 
 NS_IMETHODIMP
-jsdScript::GetFunctionName(char **_rval)
+jsdScript::GetFunctionName(nsACString &_rval)
 {
-    *_rval = ToNewCString(*mFunctionName);
-    if (!*_rval)
-        return NS_ERROR_OUT_OF_MEMORY;
+    _rval.Assign(*mFunctionName);
     return NS_OK;
 }
 
@@ -1293,7 +1267,10 @@ jsdScript::GetFunctionSource(nsAString & aFunctionSource)
     if (!jsstr)
         return NS_ERROR_FAILURE;
 
-    aFunctionSource = reinterpret_cast<PRUnichar*>(JS_GetStringChars(jsstr));
+    aFunctionSource =
+        nsDependentString(
+            reinterpret_cast<PRUnichar*>(JS_GetStringChars(jsstr)),
+            JS_GetStringLength(jsstr));
     return NS_OK;
 }
 
@@ -1797,20 +1774,10 @@ jsdStackFrame::GetExecutionContext(jsdIContext **_rval)
 }
 
 NS_IMETHODIMP
-jsdStackFrame::GetFunctionName(char **_rval)
+jsdStackFrame::GetFunctionName(nsACString &_rval)
 {
     ASSERT_VALID_EPHEMERAL;
-    const char *name = JSD_GetNameForStackFrame(mCx, mThreadState,
-                                                mStackFrameInfo);
-    if (name) {
-        *_rval = PL_strdup(name);
-        if (!*_rval)
-            return NS_ERROR_OUT_OF_MEMORY;
-    } else {
-        /* top level scripts have no function name */
-        *_rval = nsnull;
-        return NS_OK;
-    }
+    _rval.Assign(JSD_GetNameForStackFrame(mCx, mThreadState, mStackFrameInfo));
     return NS_OK;
 }
 
@@ -1918,7 +1885,7 @@ jsdStackFrame::GetThisValue(jsdIValue **_rval)
 
 
 NS_IMETHODIMP
-jsdStackFrame::Eval (const nsAString &bytes, const char *fileName,
+jsdStackFrame::Eval (const nsAString &bytes, const nsACString &fileName,
                      PRUint32 line, jsdIValue **result, PRBool *_rval)
 {
     ASSERT_VALID_EPHEMERAL;
@@ -1944,7 +1911,8 @@ jsdStackFrame::Eval (const nsAString &bytes, const char *fileName,
     *_rval = JSD_AttemptUCScriptInStackFrame (mCx, mThreadState,
                                               mStackFrameInfo,
                                               char_bytes, bytes.Length(),
-                                              fileName, line, &jv);
+                                              PromiseFlatCString(fileName).get(),
+                                              line, &jv);
     if (!*_rval) {
         if (JS_IsExceptionPending(cx))
             JS_GetPendingException (cx, &jv);
@@ -2109,17 +2077,10 @@ jsdValue::GetJsParent (jsdIValue **_rval)
 }
 
 NS_IMETHODIMP
-jsdValue::GetJsClassName(char **_rval)
+jsdValue::GetJsClassName(nsACString &_rval)
 {
     ASSERT_VALID_EPHEMERAL;
-    const char *name = JSD_GetValueClassName(mCx, mValue);
-    if (name) {
-        *_rval = PL_strdup(name);
-        if (!*_rval)
-            return NS_ERROR_OUT_OF_MEMORY;
-    } else {
-        *_rval = nsnull;
-    }
+    _rval.Assign(JSD_GetValueClassName(mCx, mValue));
     
     return NS_OK;
 }
@@ -2134,20 +2095,10 @@ jsdValue::GetJsConstructor (jsdIValue **_rval)
 }
 
 NS_IMETHODIMP
-jsdValue::GetJsFunctionName(char **_rval)
+jsdValue::GetJsFunctionName(nsACString &_rval)
 {
     ASSERT_VALID_EPHEMERAL;
-    const char *name = JSD_GetValueFunctionName(mCx, mValue);
-    if (name) {
-        *_rval = PL_strdup(name);
-        if (!*_rval)
-            return NS_ERROR_OUT_OF_MEMORY;
-    } else {
-        /* top level scripts have no function name */
-        *_rval = nsnull;
-        return NS_OK;
-    }
-
+    _rval.Assign(JSD_GetValueFunctionName(mCx, mValue));
     return NS_OK;
 }
 
@@ -2191,17 +2142,17 @@ jsdValue::GetObjectValue(jsdIObject **_rval)
 }
     
 NS_IMETHODIMP
-jsdValue::GetStringValue(char **_rval)
+jsdValue::GetStringValue(nsACString &_rval)
 {
     ASSERT_VALID_EPHEMERAL;
     JSString *jstr_val = JSD_GetValueString(mCx, mValue);
     if (jstr_val) {
-        char *bytes = JS_GetStringBytes(jstr_val);
-        *_rval = PL_strdup(bytes);
-        if (!*_rval)
-            return NS_ERROR_OUT_OF_MEMORY;
+        nsDependentString chars(
+            reinterpret_cast<PRUnichar*>(JS_GetStringChars(jstr_val)),
+            JS_GetStringLength(jstr_val));
+        CopyUTF16toUTF8(chars, _rval);
     } else {
-        *_rval = nsnull;
+        _rval.Truncate();
     }
     return NS_OK;
 }
@@ -2255,7 +2206,7 @@ jsdValue::GetProperties (jsdIProperty ***propArray, PRUint32 *length)
 }
 
 NS_IMETHODIMP
-jsdValue::GetProperty (const char *name, jsdIProperty **_rval)
+jsdValue::GetProperty (const nsACString &name, jsdIProperty **_rval)
 {
     ASSERT_VALID_EPHEMERAL;
     JSContext *cx = JSD_GetDefaultJSContext (mCx);
@@ -2263,7 +2214,7 @@ jsdValue::GetProperty (const char *name, jsdIProperty **_rval)
     JSAutoRequest ar(cx);
 
     /* not rooting this */
-    JSString *jstr_name = JS_NewStringCopyZ (cx, name);
+    JSString *jstr_name = JS_NewStringCopyZ(cx, PromiseFlatCString(name).get());
     if (!jstr_name)
         return NS_ERROR_OUT_OF_MEMORY;
 
@@ -2453,11 +2404,9 @@ jsdService::SetFlags (PRUint32 flags)
 }
 
 NS_IMETHODIMP
-jsdService::GetImplementationString(char **_rval)
+jsdService::GetImplementationString(nsACString &aImplementationString)
 {
-    *_rval = PL_strdup(implementationString);
-    if (!*_rval)
-        return NS_ERROR_OUT_OF_MEMORY;
+    aImplementationString.AssignLiteral(implementationString);
     return NS_OK;
 }
 
@@ -2738,14 +2687,14 @@ jsdService::GC (void)
 }
     
 NS_IMETHODIMP
-jsdService::DumpHeap(const char* fileName)
+jsdService::DumpHeap(const nsACString &fileName)
 {
     ASSERT_VALID_CONTEXT;
 #ifndef DEBUG
     return NS_ERROR_NOT_IMPLEMENTED;
 #else
     nsresult rv = NS_OK;
-    FILE *file = fileName ? fopen(fileName, "w") : stdout;
+    FILE *file = !fileName.IsEmpty() ? fopen(PromiseFlatCString(fileName).get(), "w") : stdout;
     if (!file) {
         rv = NS_ERROR_FAILURE;
     } else {
@@ -2774,7 +2723,7 @@ jsdService::InsertFilter (jsdIFilter *filter, jsdIFilter *after)
     if (jsds_FindFilter (filter))
         return NS_ERROR_INVALID_ARG;
 
-    FilterRecord *rec = PR_NEWZAP (FilterRecord);
+    FilterRecord *rec = new FilterRecord;
     if (!rec)
         return NS_ERROR_OUT_OF_MEMORY;
 
@@ -2816,7 +2765,7 @@ jsdService::AppendFilter (jsdIFilter *filter)
     NS_ENSURE_ARG_POINTER (filter);
     if (jsds_FindFilter (filter))
         return NS_ERROR_INVALID_ARG;
-    FilterRecord *rec = PR_NEWZAP (FilterRecord);
+    FilterRecord *rec = new FilterRecord;
 
     if (!jsds_SyncFilter (rec, filter)) {
         PR_Free (rec);
